--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,7 @@
 # Treat all Go files in this repo as binary, with no git magic updating
 # line endings. Windows users contributing to Go will need to use a
 # modern version of git and editors capable of LF line endings.
-
 *.go -text diff=golang
+
+# Store these files in LFS instead of the main repository.
+*.mp3 filter=lfs diff=lfs merge=lfs -text
