ci: install ARM64 toolchain for Windows
I updated the GitHub Actions workflow to install the ARM64 build tools
to fix an error compiling SQLite using CGO.

--- a/.github/workflows/windows-builds.yml
+++ b/.github/workflows/windows-builds.yml
@@ -37,6 +37,14 @@ jobs:
           cache: true
           cache-dependency-path: go.sum
 
+      - name: Install ARM64 build tools
+        if: matrix.arch == 'arm64'
+        run: |
+          choco install -y llvm --version=19.1.7
+          echo "CC=clang" >> $env:GITHUB_ENV
+          echo "CXX=clang++" >> $env:GITHUB_ENV
+        shell: pwsh
+
       - name: Build debug binary
         env:
           CGO_ENABLED: 1
