ci: specify Go build tags
I updated `linux-builds.yml` to allow the specification of Go build
tags. I updated `docker-container.yml` to pass the `docker` build tag
which will affect how the Time program is built.

--- a/.github/workflows/docker-container.yml
+++ b/.github/workflows/docker-container.yml
@@ -17,6 +17,8 @@ jobs:
   build-binaries:
     name: Build Linux Binaries
     uses: ./.github/workflows/linux-builds.yml
+    with:
+      build-tags: 'docker'
 
   build-and-push:
     name: Build and Push Docker Image
