ci: fix container image tagging

--- a/.github/workflows/docker-container.yml
+++ b/.github/workflows/docker-container.yml
@@ -68,32 +68,30 @@ jobs:
             org.opencontainers.image.vendor=mfcollins3
 
       - name: Build and push AMD64 image
+        id: build-amd64
         uses: docker/build-push-action@v6
         with:
           context: ./artifacts/amd64
           file: ./Dockerfile
           platforms: linux/amd64
-          tags: ${{ steps.meta.outputs.tags }}-amd64
+          outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
           labels: ${{ steps.meta.outputs.labels }}
-          push: true
           cache-from: type=gha,scope=amd64
           cache-to: type=gha,mode=max,scope=amd64
 
       - name: Build and push ARM64 image
+        id: build-arm64
         uses: docker/build-push-action@v6
         with:
           context: ./artifacts/arm64
           file: ./Dockerfile
           platforms: linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}-arm64
+          outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
           labels: ${{ steps.meta.outputs.labels }}
-          push: true
           cache-from: type=gha,scope=arm64
           cache-to: type=gha,mode=max,scope=arm64
 
       - name: Create and push multi-platform manifest
-        env:
-          DOCKER_CLI_EXPERIMENTAL: enabled
         run: |
           # Extract tags from metadata action output
           TAGS="${{ steps.meta.outputs.tags }}"
@@ -104,7 +102,7 @@ jobs:
               echo "Creating manifest for $tag"
               docker buildx imagetools create \
                 --tag "${tag}" \
-                "${tag}-amd64" \
-                "${tag}-arm64"
+                "${{ steps.build-amd64.outputs.digest }}" \
+                "${{ steps.build-arm64.outputs.digest }}"
             fi
           done <<< "$TAGS"
