ci: use slash commands to build Time
I created a new GitHub Actions workflow that will use custom slash
commands in comments on pull requests to run the build workflows for
Linux, Windows, and Docker/building the container images.

--- a/.github/workflows/windows-builds.yml
+++ b/.github/workflows/windows-builds.yml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+  repository_dispatch:
+    types: [build-windows-command]
   workflow_dispatch:
 
 permissions:
