--- a/.github/workflows/linux-builds.yml
+++ b/.github/workflows/linux-builds.yml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+  repository_dispatch:
+    types: [build-linux-command]
   workflow_dispatch:
     inputs:
       build-tags:
