ci: build Time for Apple macOS
I created a GitHub Actions workflow that will build Time for Apple macOS
when instructed to using the /build-macos slash command or when run
manually. I configured the workflow to notarize the Time program using
Apple Notarization.

--- a/.github/workflows/slash-command-dispatch.yml
+++ b/.github/workflows/slash-command-dispatch.yml
@@ -25,4 +25,5 @@ jobs:
             build-linux
             build-docker
             build-windows
+            build-macos
           dispatch-type: repository_dispatch
