--- a/.github/workflows/docker-container.yml
+++ b/.github/workflows/docker-container.yml
@@ -4,6 +4,7 @@ on:
   repository_dispatch:
     types: [build-docker-command]
   workflow_dispatch:
+  workflow_call:
 
 permissions:
   contents: read
