--- a/.github/workflows/macos-builds.yml
+++ b/.github/workflows/macos-builds.yml
@@ -4,6 +4,7 @@ on:
   repository_dispatch:
     types: [build-macos-command]
   workflow_dispatch:
+  workflow_call:
 
 permissions:
   contents: read
