--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,11 +8,22 @@
         },
         "ghcr.io/devcontainers/features/github-cli:1": {},
         "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+        "ghcr.io/devcontainers/features/powershell:1": {},
         "ghcr.io/devcontainers/features/node:1": {
             "version": "24.10.0"
         },
         "ghcr.io/devcontainers/features/go:1": {
             "version": "1.25.3"
+        }
+    },
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "golang.go",
+                "docker.docker",
+                "ms-azuretools.vscode-docker",
+                "ms-vscode.powershell"
+            ]
         }
     },
     "remoteUser": "vscode",
