--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,11 @@
 # Auto detect text files and perform LF normalization
 *          text=auto
 
+# These are explicitly Windows files and should use CRLF line endings.
+*.bat       text eol=crlf
+*.cmd       text eol=crlf
+*.ps1       text eol=crlf
+
 # Treat all Go files in this repo as binary, with no git magic updating
 # line endings. Windows users contributing to Go will need to use a
 # modern version of git and editors capable of LF line endings.
