style: add copyright and license text
I updated all of the source code files and added a standard file header
containing the copyright statement and the text of the license
agreement. The purpose of including the text of the license agreement is
to ensure that the license terms are communicated if individual source
files are redistributed separately from the rest of the product source
code to inform the recipients of the license terms covering the source
code.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mfcollins3/time",
   "version": "0.0.1",
-  "description": "Naked Time is a productivity application that helps users to manage their time effectively",
+  "description": "Time is a productivity application that helps users to manage their time effectively",
   "keywords": [
     "analysis",
     "management",
@@ -9,7 +9,7 @@
     "productivity",
     "time"
   ],
-  "homepage": "https://www.nakedtime.app",
+  "homepage": "https://github.com/mfcollins3/time",
   "bugs": {
     "url": "https://github.com/mfcollins3/time/issues",
     "email": "mfcollins3@me.com"
