ci: fix container build error
I fixed a problem with the build of Time in the container image. It was
using the same executables built for Linux, but I forgot that certain
library dependencies and capabilities are not supported in the
containers. I used Claude Sonnet 4.5 to fix the builds so that different
Linux executables are created for the container image.

--- a/.github/workflows/docker-container.yml
+++ b/.github/workflows/docker-container.yml
@@ -213,13 +213,13 @@ jobs:
       - name: Download AMD64 artifact
         uses: actions/download-artifact@v4
         with:
-          name: time-linux-amd64
+          name: time-linux-amd64-docker
           path: ./artifacts/amd64
 
       - name: Download ARM64 artifact
         uses: actions/download-artifact@v4
         with:
-          name: time-linux-arm64
+          name: time-linux-arm64-docker
           path: ./artifacts/arm64
 
       - name: Extract metadata for Docker
