ci: fix missing execute permission
The time programs built for Linux and Apple macOS were not carrying
their execute flag in the distribution archives. I updated release.yml
to explicitly set the execute flag before archiving, and then to ensure
that the archive carried the execute flag so that the time program is
executable after extracting it from the archive.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -293,6 +293,14 @@ jobs:
         run: |
           mkdir -p release-archives
           
+          # Ensure all binaries have execute permissions before archiving
+          chmod +x artifacts/time-linux-amd64/time
+          chmod +x artifacts/time-linux-amd64-debug/time
+          chmod +x artifacts/time-linux-arm64/time
+          chmod +x artifacts/time-linux-arm64-debug/time
+          chmod +x artifacts/time-macos-arm64/time
+          chmod +x artifacts/time-macos-arm64-debug/time
+          
           # Linux AMD64
           cd artifacts/time-linux-amd64
           tar -czf ../../release-archives/time-${VERSION}-linux-amd64.tar.gz time
