--- a/.github/workflows/docker-container.yml
+++ b/.github/workflows/docker-container.yml
@@ -232,6 +232,7 @@ jobs:
             type=ref,event=pr,prefix=pr-
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
             type=sha,prefix=sha-
             type=raw,value=latest,enable={{is_default_branch}}
           labels: |
