--- a/.gitattributes
+++ b/.gitattributes
@@ -162,19 +162,16 @@
 #
 # For inquiries about commercial licensing, please contact the copyright
 # holder.
-
 # Auto detect text files and perform LF normalization
 *          text=auto
-
 # These are explicitly Windows files and should use CRLF line endings.
 *.bat       text eol=crlf
 *.cmd       text eol=crlf
 *.ps1       text eol=crlf
-
 # Treat all Go files in this repo as binary, with no git magic updating
 # line endings. Windows users contributing to Go will need to use a
 # modern version of git and editors capable of LF line endings.
 *.go -text diff=golang
-
 # Store these files in LFS instead of the main repository.
 *.mp3 filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
