--- a/.github/release.yml
+++ b/.github/release.yml
@@ -163,5 +163,40 @@
 # For inquiries about commercial licensing, please contact the copyright
 # holder.
 
-command -v git-lfs >/dev/null 2>&1 || { printf >&2 "\n%s\n\n" "This repository is configured for Git LFS but 'git-lfs' was not found on your path. If you no longer wish to use Git LFS, remove this hook by deleting the 'pre-push' file in the hooks directory (set by 'core.hookspath'; usually '.git/hooks')."; exit 2; }
-git lfs pre-push "$@"
+changelog:
+  exclude:
+    labels:
+      - chore
+      - ci
+      - duplicate
+      - good first issue
+      - help wanted
+      - invalid
+      - question
+      - revert
+      - spike
+      - style
+      - test
+      - wontfix
+  categories:
+    - title: Breaking Changes
+      labels:
+        - breaking change
+    - title: Added
+      labels:
+        - enhancement
+    - title: Changed
+      labels:
+        - change
+    - title: Deprecated
+      labels:
+        - deprecate
+    - title: Removed
+      labels:
+        - remove
+    - title: Fixed
+      labels:
+        - bug
+    - title: security
+      labels:
+        - security
