--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -241,9 +241,9 @@ jobs:
       github.event.pull_request.merged == false
     uses: ./.github/workflows/windows-builds.yml
 
-  # Build and push Docker container
-  build-docker:
-    name: Build Docker Container
+  # Build and push Docker container for PR testing
+  build-docker-pr:
+    name: Build Docker Container (PR)
     needs: 
       - extract-version
       - build-linux
@@ -264,7 +264,7 @@ jobs:
       - build-linux
       - build-macos
       - build-windows
-      - build-docker
+      - build-docker-pr
     runs-on: ubuntu-24.04
     if: |
       needs.extract-version.outputs.is_release_branch == 'true' &&
@@ -572,3 +572,19 @@ jobs:
             git push origin "${MAJOR_TAG}"
             echo "✅ Created and pushed tag ${MAJOR_TAG}"
           fi
+
+  # Build and push final Docker image with version tags
+  publish-docker:
+    name: Build and Push Docker Image with Version Tags
+    needs: 
+      - extract-version
+      - publish-release
+    if: |
+      needs.extract-version.outputs.is_release_branch == 'true' &&
+      github.event_name == 'pull_request' &&
+      github.event.pull_request.merged == true &&
+      github.event.pull_request.base.ref == 'main'
+    uses: ./.github/workflows/docker-container.yml
+    with:
+      skip-build: false
+    secrets: inherit
