ci: fix container image tagging
I fixed `release.yml` to fix the tagging of the container image. The
container image isn't getting tagged with the version number labels
because the metadata step needs to run for a tag event, not the event of
the PR being closed. I modified the workflow to build and publish the
release container image when the version tag is created.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -170,6 +170,9 @@ on:
     types: [opened, synchronize, reopened, closed]
     branches:
       - main
+  push:
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
   workflow_dispatch:
 
 permissions:
@@ -574,16 +577,10 @@ jobs:
           fi
 
   # Build and push final Docker image with version tags
+  # This only runs when a version tag is pushed (which happens automatically after PR merge)
   publish-docker:
     name: Build and Push Docker Image with Version Tags
-    needs: 
-      - extract-version
-      - publish-release
-    if: |
-      needs.extract-version.outputs.is_release_branch == 'true' &&
-      github.event_name == 'pull_request' &&
-      github.event.pull_request.merged == true &&
-      github.event.pull_request.base.ref == 'main'
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/docker-container.yml
     with:
       skip-build: false
