ci: fix container image tagging
The previous commit didn't fully work. Passing the tag for the
`workflow_dispatch` command didn't set it for the container image
metadata generation, so the build was not getting tagged correctly.
GitHub Copilot helped me to fix it.

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -225,6 +225,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Determine tag reference
+        id: tag-ref
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "ref=refs/tags/${{ inputs.tag }}" >> $GITHUB_OUTPUT
+          else
+            echo "ref=${{ github.ref }}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -239,6 +248,8 @@ jobs:
             org.opencontainers.image.title=Time
             org.opencontainers.image.description=Pomodoro Technique time management application
             org.opencontainers.image.vendor=mfcollins3
+        env:
+          DOCKER_METADATA_INPUTS_CONTEXT_REF: ${{ steps.tag-ref.outputs.ref }}
 
       - name: Build and push AMD64 image
         id: build-amd64
