spike: create MCP server
I created a starter MCP server that exposes Pomodoros from the database
to an AI agent. I created a template resource to export Pomodoro records
and a tool that will allow the AI model to request Pomodoros from a date
range.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,13 @@
         {
             "name": "Attach to Time",
             "type": "go",
+            "request": "attach",
+            "mode": "local",
+            "processId": 0
+        },
+        {
+            "name": "Debug Time",
+            "type": "go",
             "debugAdapter": "dlv-dap",
             "request": "attach",
             "mode": "remote",
