spike: create get_pomodoros tool
I created the get_pomodoros tool to return all pomodoros. This was
created because the former list_pomodoros tool was awkward to invoke
using Microsoft Copilot Studio.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Attach to Time",
+            "name": "Debug MCP Server (ngrok)",
             "type": "go",
-            "request": "attach",
-            "mode": "local",
-            "processId": 0
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/time",
+            "cwd": "${workspaceFolder}",
+            "args": [
+                "mcp",
+                "ngrok"
+            ]
         },
         {
-            "name": "Debug Time",
+            "name": "Debug Time (TUI)",
             "type": "go",
             "debugAdapter": "dlv-dap",
             "request": "attach",
@@ -21,6 +26,13 @@
             "port": 2345,
             "host": "127.0.0.1",
             "preLaunchTask": "Run headless dlv"
+        },
+        {
+            "name": "Attach to Time",
+            "type": "go",
+            "request": "attach",
+            "mode": "local",
+            "processId": 0
         }
     ]
 }
