spike: add OpenTelemetry reporting
I integrated the OpenTelemetry SDK into the application and instrumented
the HTTP-mode MCP server to report telemetry.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,10 @@
             "args": [
                 "mcp",
                 "ngrok"
-            ]
+            ],
+            "env": {
+                "OTEL_RESOURCE_ATTRIBUTES": "service.name=pomodoro,service.version=0.1.0"
+            }
         },
         {
             "name": "Debug Time (TUI)",
