ci: fix slash-command-dispatch.yaml
There was a bad dispatch-type value for dispatching slash commands. I
corrected the value so that the commands can be dispatched.

--- a/.github/workflows/slash-command-dispatch.yml
+++ b/.github/workflows/slash-command-dispatch.yml
@@ -191,4 +191,4 @@ jobs:
             build-docker
             build-windows
             build-macos
-          dispatch-type: repository_dispatch
+          dispatch-type: repository
