chore: create sqlite dev container feature
I created a new local development container feature that will install
the SQlite CLI tool into the development container. This is helpful
because it can be used to validate that the database is being updated
correctly in response to user and application actions.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,7 @@
         "ghcr.io/devcontainers/features/docker-in-docker:2": {},
         "ghcr.io/devcontainers/features/powershell:1": {},
         "ghcr.io/jckimble/devcontainer-features/ngrok:3": {},
+        "./features/sqlite3": {},
         "ghcr.io/devcontainers/features/node:1": {
             "version": "24.10.0"
         },
